@@ -1,5 +1,6 @@
 28. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- option for displaying progressed file at scanning directory tree added
+	- remember last media type in adddialog
 
 27. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- progressbar at busydialog on loading/parsing file added
